0.06
 - Add tests.
 - Fix 'color' parameter default value in doc.
 - Remove trailing whitespace from code.
 - Simplify code (remove 'color_random' parameter).

0.05 2014-10-24T01:12:29+02:00
 - Add Image::Select to SEE ALSO section in doc.
 - Fix ERRORS section in doc.
 - Rewrite B<> to C<> in doc.

0.01 2014-10-23T18:22:08+02:00
 - First version.