@@ -49,14 +49,14 @@ METHODS
 ERRORS
      new():
              Bad background color definition. Use Imager::Color object.
-             Suffix '%s' doesn't supported.
+             Image type '%s' doesn't supported.
              From Class::Utils:
                      Unknown parameter '%s'.
 
      create():
              Cannot write file to '$path'.
                      Error, %s
-             Suffix '%s' doesn't supported.
+             Image type '%s' doesn't supported.
 
 EXAMPLE
      # Pragmas.
