@@ -135,7 +135,7 @@ sub _check_type {
 	if (none { $type eq $_ } ('bmp', 'gif', 'jpeg', 'png',
 		'pnm', 'raw', 'sgi', 'tga', 'tiff')) {
 
-		err "Suffix '$type' doesn't supported.";
+		err "Image type '$type' doesn't supported.";
 	}
 
 	return;
@@ -226,14 +226,14 @@ Image::Random - Perl class for creating random image.
 
  new():
          Bad background color definition. Use Imager::Color object.
-         Suffix '%s' doesn't supported.
+         Image type '%s' doesn't supported.
          From Class::Utils:
                  Unknown parameter '%s'.
 
  create():
          Cannot write file to '$path'.
                  Error, %s
-         Suffix '%s' doesn't supported.
+         Image type '%s' doesn't supported.
 
 =head1 EXAMPLE
 
