@@ -60,6 +60,6 @@ eval {
 		'type' => 'foo',
 	);
 };
-is($EVAL_ERROR, "Suffix 'foo' doesn't supported.\n",
-	"Suffix 'foo' doesn't supported.");
+is($EVAL_ERROR, "Image type 'foo' doesn't supported.\n",
+	"Image type 'foo' doesn't supported.");
 clean();
