@@ -2,6 +2,7 @@
  - Add tests.
  - Fix 'color' parameter default value in doc.
  - Remove trailing whitespace from code.
+ - Rewrite word "Suffix" to "Image type" in error message.
  - Simplify code (remove 'color_random' parameter).
 
 0.05 2014-10-24T01:12:29+02:00
